# ohs

./: .gitmodules  Main.hs  Makefile  README  README.md  ohs.cabal  test.html  test.js
OHS/: Client.hs  Cookies.hs  Forms.hs  HTTP.hs  HXTrace.hs  Locator.hs  Login.hs  Server.hs  Types.hs
client/: Main.hs
client-vala/: json.vala
daemon/: Main.hs
data/: Update.hs
debug/: chain.pem  chromium-login.pcapng  intercept.key  intercept.pem  intercept.sh  ohsc-login.pcapng
lib/OHS/: ArrowReader.hs  Client.hs  Cookies.hs  FormSubmission.hs  HXTrace.hs  Locator.hs  Pipes.hs  Server.hs  Types.hs
lib/OHS/FormSubmission/: Types.hs
scripts/: add-sources.hs  add-sources.sh  update-dependencies.sh
src/OHScli/: Cli.hs
src/OHSd/: Main.hs
src/OHSm/: Update.hs  retrive-data.sh  update-data.sh
src/OHSm/accounts.google.com/: login-form-locator  login-form-xpath
src/OHSm/accounts.google.com/dumps/: 2015-01-04T17:31+0000
src/OHSm/ebay/: login-form-locator  login-form-xpath  login-url
src/OHSm/ebay/dumps/: 2015-01-04T17:31+0000
src/OHSm/paypal/: login-form-xpath  login-url
src/OHSm/paypal/dumps/: 2015-01-04T17:31+0000
tests/: FormSubmissionSpec.hs  LocatorSpec.hs
vala-stuff/: locator.vala  stuff.vala
