name:                ohs
version:             0.1.0.0
-- synopsis:
-- description:
license:             AGPL-3
license-file:        LICENSE
author:              Daniel Gröber
maintainer:          dxld@darkboxed.org
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:  lib/
  exposed-modules: OHS.Client
                   OHS.Server
                   OHS.Locator
                   OHS.FormSubmission
                   OHS.FormSubmission.Types
                   OHS.Cookies
                   OHS.Types
                   OHS.HXTrace
                   OHS.HTTP
                   OHS.Pipes
                   OHS.ArrowReader

  build-depends:       base >=4.6 && <4.8,
                       bytestring,
                       cereal,
                       containers,
                       aeson,
                       attoparsec,
                       either,
                       exceptions,
                       gsasl,
                       http-client,
                       http-client-tls,
                       http-types,
                       iso8601-time,
                       mtl,
                       network,
                       network-uri,
                       network-simple,
                       safecopy,
                       text,
                       time, old-locale,
                       transformers,
                       unix,
                       pipes,
                       pipes-network,
                       pipes-aeson,
                       hxt,
                       hxt-xpath,
                       safe,
                       case-insensitive,
                       parsec,
                       cookie,
                       blaze-builder,
                       data-default-class,
                       connection
  default-language:    Haskell2010

test-suite spec
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    tests
  main-is:
    Spec.hs
  build-depends:
      ohs,
      base,
      hspec,
      hxt

executable update-dataset
  default-language:  Haskell2010
  hs-source-dirs:    src/OHSm
  main-is:           Update.hs
--  other-extensions:
  build-depends:       base,
                       bytestring,
                       directory,
                       split,
                       mtl,
                       transformers,
                       filepath,
                       http-client,
                       http-client-tls,
                       http-types,
                       network-uri,
                       hxt,
                       hxt-xpath,
                       ohs

executable ohsd
  hs-source-dirs:    src/OHSd
  main-is:           Main.hs
  -- other-extensions:
  build-depends:       base >=4.6 && <4.8,
                       bytestring,
                       cereal,
                       aeson,
                       either,
                       exceptions,
                       gsasl,
                       http-client,
                       http-client-tls,
                       http-types,
                       iso8601-time,
                       mtl,
                       network >= 2.6,
                       network-uri,
                       network-simple,
                       safecopy,
                       text,
                       time, old-locale,
                       transformers,
                       unix,
                       ohs
  default-language:    Haskell2010

executable ohs
  hs-source-dirs:    src/OHScli
  main-is:           Cli.hs
  build-depends:       base >=4.6 && <4.8,
                       http-types,
                       http-client,
                       network-uri,
                       exceptions,
                       transformers,
                       mtl,
                       unix,
                       ohs
  default-language:    Haskell2010

-- executable ohs-ui-gtk
--   hs-source-dirs:    client-old/
--   main-is:           GTK.hs
--   -- other-modules:
--   -- other-extensions:
--   build-depends:       base >=4.6 && <4.8,
--                        webkit >= 0.13,
--                        gtk, glib,
--                        http-types,
--                        http-client,
--                        exceptions,
--                        mtl,
--                        unix,
--                        ohs
--   -- hs-source-dirs:
--   default-language:    Haskell2010
